--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -420,13 +420,13 @@ body {
   }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1350px) {
+@media screen and (min-width: 1024px) and (max-width: 1300px) {
   body {
     main {
       #search-section {
         .search-wrapper {
           .search-icon {
-            margin-left: 24%;
+            margin-left: 20%;
           }
         }
       }
@@ -434,7 +434,7 @@ body {
   }
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1301px) {
   body {
     main {
       #search-section {
